--- a/src/main/resources/rrz-matomo.phtml
+++ b/src/main/resources/rrz-matomo.phtml
@@ -14,7 +14,7 @@
   (function() {
     var u="https://matomo.uni-hamburg.de/";
     _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '<?= $siteId =>']);
+    _paq.push(['setSiteId', '<?= $siteId ?>']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
